Spacing tweaked, gallery images fixed.

--- a/style.css
+++ b/style.css
@@ -415,11 +415,11 @@ a:visited {
 
 @media only screen and (min-width: 1280px) {
   nav .logo {
-    padding-left: 250px;
+    padding-left: 300px;
   }
 
   nav .mainMenu {
-    padding-right: 250px;
+    padding-right: 300px;
   }
 
   nav .mainMenu li {
@@ -431,11 +431,11 @@ a:visited {
   }
 
   main {
-    margin: 0 250px;
+    margin: 0 300px;
   }
 
   .headline {
-    width: calc(50% - 250px);
+    width: calc(50% - 300px);
   }
 
   .label:hover {
@@ -444,22 +444,6 @@ a:visited {
 }
 
 @media only screen and (min-width: 1920px) {
-  * {
-    font-size: medium;
-  }
-
-  .caption {
-    font-size: small;
-  }
-
-  footer {
-    font-size: small;
-  }
-
-  .label {
-    font-size: xx-large;
-  }
-
   nav .logo {
     padding-left: 400px;
   }
@@ -481,13 +465,43 @@ a:visited {
   }
 }
 
-@media only screen and (min-width: 3840px) {
+@media only screen and (min-width: 2560px) {
+  * {
+    font-size: medium;
+  }
+
+  .caption {
+    font-size: small;
+  }
+
+  footer {
+    font-size: small;
+  }
+
   nav .logo {
-    padding-left: 1000px;
+    padding-left: 600px;
   }
 
   nav .mainMenu {
-    padding-right: 1000px;
+    padding-right: 600px;
+  }
+
+  main {
+    margin: 0 600px;
+  }
+
+  .headline {
+    width: calc(50% - 600px);
+  }
+}
+
+@media only screen and (min-width: 3840px) {
+  nav .logo {
+    padding-left: 800px;
+  }
+
+  nav .mainMenu {
+    padding-right: 800px;
   }
 
   nav .mainMenu li {
@@ -495,10 +509,10 @@ a:visited {
   }
 
   main {
-    margin: 0 1000px;
+    margin: 0 800px;
   }
 
   .headline {
-    width: calc(50% - 1000px);
+    width: calc(50% - 800px);
   }
 }
